# baseobjectswapperf4vr

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: PCH.h
src/: Hooks.cpp  Manager.cpp  SwapData.cpp  main.cpp
